Spacing issues and duplicate code

--- a/app/design/frontend/Scottsbase/default/web/css/source/_scottsbasecart.scss
+++ b/app/design/frontend/Scottsbase/default/web/css/source/_scottsbasecart.scss
@@ -54,24 +54,24 @@
                     padding-right: 15px;
                     position: relative;
                     .custom-checkout-btn-wrap {
-                      position: absolute;
-                      top: 20px;
-                      right: 0;
-                      width: 27.25%;
-                      padding: 0px 30px 0px;
-                      @media screen and (max-width: $screen__l) {
-                          width: 100% !important;
-                          padding: 0 !important;
-                      }
-                      @media screen and (max-width: $screen__m) {
-                          display: none;
-                      }
-                      .action.primary.checkout {
-                        text-transform: uppercase;
-                        font-family: Lato, Arial, sans-serif;
-                        width: 100%;
-                        padding: 23px 0;
-                      }
+                        position: absolute;
+                        top: 20px;
+                        right: 0;
+                        width: 27.25%;
+                        padding: 0px 30px 0px;
+                        @media screen and (max-width: $screen__l) {
+                            width: 100% !important;
+                            padding: 0 !important;
+                        }
+                        @media screen and (max-width: $screen__m) {
+                            display: none;
+                        }
+                        .action.primary.checkout {
+                          text-transform: uppercase;
+                          font-family: Lato, Arial, sans-serif;
+                          width: 100%;
+                          padding: 23px 0;
+                        }
                     }
                     .custom-checkout-btn-wrap.stickyCart{
                         @media screen and (max-width: $screen__m) {
@@ -320,37 +320,37 @@
                             }
                             .checkout-methods-items {
                                 .item {
-                                  .action.checkout {
-                                    -webkit-transition: background 0.2s;
-                                    -moz-transition: background 0.2s;
-                                    -ms-transition: background 0.2s;
-                                    -o-transition: background 0.2s;
-                                    transition: background 0.2s;
-                                    border: none;
-                                    &:hover {
-                                      -webkit-transition: background 0.2s;
-                                      -moz-transition: background 0.2s;
-                                      -ms-transition: background 0.2s;
-                                      -o-transition: background 0.2s;
-                                      transition: background 0.2s;
+                                    .action.checkout {
+                                        -webkit-transition: background 0.2s;
+                                        -moz-transition: background 0.2s;
+                                        -ms-transition: background 0.2s;
+                                        -o-transition: background 0.2s;
+                                        transition: background 0.2s;
+                                        border: none;
+                                        &:hover {
+                                            -webkit-transition: background 0.2s;
+                                            -moz-transition: background 0.2s;
+                                            -ms-transition: background 0.2s;
+                                            -o-transition: background 0.2s;
+                                            transition: background 0.2s;
+                                        }
                                     }
-                                  }
                                 }
                                 .upd-cust-btn {
                                     .action.checkout {
-                                      padding: 23px 0;
-                                      text-transform: uppercase;
-                                      font-size: 15px;
-                                      line-height: 0px;
-                                      font-family: Lato, Arial, sans-serif;
-                                      width: 100%;
-                                      border-radius: 0.313rem;
-                                      transition: background 0.2s linear;
-                                      -webkit-transition: background 0.2s;
-                                      -moz-transition: background 0.2s;
-                                      -ms-transition: background 0.2s;
-                                      -o-transition: background 0.2s;
-                                      letter-spacing: 0.5px;
+                                        padding: 23px 0;
+                                        text-transform: uppercase;
+                                        font-size: 15px;
+                                        line-height: 0px;
+                                        font-family: Lato, Arial, sans-serif;
+                                        width: 100%;
+                                        border-radius: 0.313rem;
+                                        transition: background 0.2s linear;
+                                        -webkit-transition: background 0.2s;
+                                        -moz-transition: background 0.2s;
+                                        -ms-transition: background 0.2s;
+                                        -o-transition: background 0.2s;
+                                        letter-spacing: 0.5px;
                                     }
                                 }
                             }
@@ -438,39 +438,30 @@
         cursor: pointer;
         margin-left: 5px;
         &:hover {
-          -webkit-transition: background 0.2s;
-          -moz-transition: background 0.2s;
-          -ms-transition: background 0.2s;
-          -o-transition: background 0.2s;
-          transition: background 0.2s;
-          color: $color_black;
+            -webkit-transition: background 0.2s;
+            -moz-transition: background 0.2s;
+            -ms-transition: background 0.2s;
+            -o-transition: background 0.2s;
+            transition: background 0.2s;
+            color: $color_black;
         }
     }
     #maincontent {
-      .columns .column {
-        .cart-container {
-          form#form-validate {
-            border:0;
-            width: 100%;
-          }
+        .columns .column {
+            .cart-container {
+                form#form-validate {
+                    border:0;
+                    width: 100%;
+                }
+            }
         }
-      }
     }
 }
 
+// Empty Cart Page //
 .empty-cart-page.checkout-cart-index {
     .actions {
         display: none;
     }
 }
 
-//Style Update Cart and Remove Item link
-.checkout-cart-index .cart-container .form-cart {
-  .actions-toolbar {
-    a.action-delete {
-      font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-      text-decoration: underline;
-      font-size: 0.8rem;
-    }
-  }
-}
